refactor issue responses
